Set-up before massive UI/UX tweaking/testing

--- a/Polara/Polara/Storyboards/Base.lproj/Main.storyboard
+++ b/Polara/Polara/Storyboards/Base.lproj/Main.storyboard
@@ -192,9 +192,9 @@
                                                 </stackView>
                                             </subviews>
                                         </stackView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="31°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K4R-b3-2sM">
-                                            <rect key="frame" x="368" y="70" width="26" height="20"/>
-                                            <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K4R-b3-2sM">
+                                            <rect key="frame" x="369.5" y="67.5" width="36.5" height="25.5"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                             <color key="textColor" name="iceBlue"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -202,9 +202,9 @@
                                     <constraints>
                                         <constraint firstItem="X87-gh-MN6" firstAttribute="leading" secondItem="r9t-Ug-Zfa" secondAttribute="trailing" constant="8" id="FJh-Ts-4Mv"/>
                                         <constraint firstItem="X87-gh-MN6" firstAttribute="centerY" secondItem="C3L-nt-ia7" secondAttribute="centerY" id="FMj-5x-3TH"/>
+                                        <constraint firstAttribute="trailing" secondItem="K4R-b3-2sM" secondAttribute="trailing" constant="8" id="LuM-8B-mkP"/>
                                         <constraint firstItem="r9t-Ug-Zfa" firstAttribute="centerY" secondItem="C3L-nt-ia7" secondAttribute="centerY" id="QJz-xx-4B0"/>
-                                        <constraint firstItem="K4R-b3-2sM" firstAttribute="trailing" secondItem="C3L-nt-ia7" secondAttribute="trailingMargin" id="Y1t-dw-t6l"/>
-                                        <constraint firstItem="K4R-b3-2sM" firstAttribute="bottom" secondItem="X87-gh-MN6" secondAttribute="bottom" id="caD-Pr-tqK"/>
+                                        <constraint firstItem="K4R-b3-2sM" firstAttribute="centerY" secondItem="yPo-2V-bPx" secondAttribute="centerY" id="RoN-ON-Mdm"/>
                                         <constraint firstItem="r9t-Ug-Zfa" firstAttribute="leading" secondItem="C3L-nt-ia7" secondAttribute="leadingMargin" id="o1U-xG-mRd"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -1155,7 +1155,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                        <color key="backgroundColor" name="darkMode"/>
                         <constraints>
                             <constraint firstItem="1pg-AF-Tn9" firstAttribute="leading" secondItem="ohY-vO-Jai" secondAttribute="leading" constant="20" id="4Tb-Jq-umg"/>
                             <constraint firstItem="iLf-B1-159" firstAttribute="top" secondItem="WoE-mh-ERl" secondAttribute="bottom" constant="8" id="4iH-Uq-fXO"/>
@@ -1252,23 +1252,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CONTACTS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q92-83-0J0">
-                                <rect key="frame" x="162" y="438" width="90" height="20"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="9cc-an-0uN">
+                                <rect key="frame" x="143.5" y="404.5" width="127" height="87"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ROBOTO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q92-83-0J0" userLabel="Roboto Label">
+                                        <rect key="frame" x="0.0" y="0.0" width="127" height="35"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SYSTEM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgd-tS-tE6">
+                                        <rect key="frame" x="0.0" y="51" width="127" height="36"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Q92-83-0J0" firstAttribute="centerX" secondItem="jBs-bV-YX8" secondAttribute="centerX" id="VVR-xD-yjC"/>
-                            <constraint firstItem="Q92-83-0J0" firstAttribute="centerY" secondItem="jBs-bV-YX8" secondAttribute="centerY" id="VnT-8W-nGw"/>
+                            <constraint firstItem="9cc-an-0uN" firstAttribute="centerY" secondItem="jBs-bV-YX8" secondAttribute="centerY" id="V0X-Kd-Ib4"/>
+                            <constraint firstItem="9cc-an-0uN" firstAttribute="centerX" secondItem="jBs-bV-YX8" secondAttribute="centerX" id="yxP-qN-vaB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yGa-Su-sTQ"/>
                     </view>
                     <navigationItem key="navigationItem" id="ZWl-y4-496"/>
                     <connections>
-                        <outlet property="label" destination="Q92-83-0J0" id="dr3-Nm-zs9"/>
+                        <outlet property="robotoLabel" destination="Q92-83-0J0" id="biJ-lZ-h7f"/>
+                        <outlet property="systemLabel" destination="cgd-tS-tE6" id="gHB-gC-fqW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EH8-M3-gxd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
