--- a/Polara/Polara/Storyboards/TripCell.xib
+++ b/Polara/Polara/Storyboards/TripCell.xib
@@ -6,14 +6,6 @@
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Roboto-Bold.ttf">
-            <string>Roboto-Bold</string>
-        </array>
-        <array key="Roboto-Regular.ttf">
-            <string>Roboto-Regular</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -24,27 +16,27 @@
                 <rect key="frame" x="0.0" y="0.0" width="414" height="115"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Mi0-Cg-Jpt">
-                        <rect key="frame" x="24" y="23" width="366" height="69"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="Mi0-Cg-Jpt">
+                        <rect key="frame" x="20" y="27.5" width="374" height="60"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Resort Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rig-G7-fYz">
-                                <rect key="frame" x="0.0" y="0.0" width="366" height="41"/>
-                                <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="35"/>
+                                <rect key="frame" x="0.0" y="0.0" width="198.5" height="39.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="33"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="56g-6A-2Xb">
-                                <rect key="frame" x="0.0" y="49" width="366" height="20"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="56g-6A-2Xb">
+                                <rect key="frame" x="0.0" y="39.5" width="228" height="20.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Creator Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZBy-hw-Kio">
-                                        <rect key="frame" x="0.0" y="0.0" width="106.5" height="20"/>
-                                        <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="17"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Date of Trip" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="op9-z0-Vyy">
+                                        <rect key="frame" x="0.0" y="0.0" width="95" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" name="iceBlue"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text=" ● DATE OF TRIP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="op9-z0-Vyy">
-                                        <rect key="frame" x="106.5" y="0.0" width="259.5" height="20"/>
-                                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Resort Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZBy-hw-Kio">
+                                        <rect key="frame" x="99" y="0.0" width="129" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -53,11 +45,11 @@
                         </subviews>
                     </stackView>
                 </subviews>
-                <color key="backgroundColor" name="darkMode"/>
+                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="Mi0-Cg-Jpt" firstAttribute="leading" secondItem="rh1-Ts-Omf" secondAttribute="leading" constant="24" id="Kqw-qv-sMF"/>
+                    <constraint firstItem="Mi0-Cg-Jpt" firstAttribute="leading" secondItem="rh1-Ts-Omf" secondAttribute="leading" constant="20" id="Kqw-qv-sMF"/>
                     <constraint firstItem="Mi0-Cg-Jpt" firstAttribute="centerY" secondItem="rh1-Ts-Omf" secondAttribute="centerY" id="T2U-Y9-udb"/>
-                    <constraint firstAttribute="trailing" secondItem="Mi0-Cg-Jpt" secondAttribute="trailing" constant="24" id="nPo-jf-5dA"/>
+                    <constraint firstAttribute="trailing" secondItem="Mi0-Cg-Jpt" secondAttribute="trailing" constant="20" id="nPo-jf-5dA"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -69,8 +61,8 @@
         </tableViewCell>
     </objects>
     <resources>
-        <namedColor name="darkMode">
-            <color red="0.12156862745098039" green="0.12941176470588237" blue="0.14117647058823529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="iceBlue">
+            <color red="0.40000000000000002" green="0.80000000000000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
